// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: className css 1`] = `
".MuiPaper-root {
  background-color: #fff;
}
.MuiPaper-rounded {
  border-radius: 2px;
}
.MuiPaper-shadow0 {
  box-shadow: none;
}
.MuiPaper-shadow1 {
  box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow2 {
  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow3 {
  box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow4 {
  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow5 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow6 {
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow7 {
  box-shadow: 0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow8 {
  box-shadow: 0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow9 {
  box-shadow: 0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow10 {
  box-shadow: 0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow11 {
  box-shadow: 0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow12 {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow13 {
  box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow14 {
  box-shadow: 0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow15 {
  box-shadow: 0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow16 {
  box-shadow: 0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow17 {
  box-shadow: 0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow18 {
  box-shadow: 0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow19 {
  box-shadow: 0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow20 {
  box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow21 {
  box-shadow: 0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow22 {
  box-shadow: 0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow23 {
  box-shadow: 0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12);
}
.MuiPaper-shadow24 {
  box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12);
}
.MuiInput-root {
  color: rgba(0, 0, 0, 0.87);
  display: inline-flex;
  position: relative;
  font-size: 1rem;
  align-items: baseline;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
}
label + .MuiInput-formControl {
  margin-top: 16px;
}
.MuiInput-inkbar:after {
  left: 0;
  right: 0;
  bottom: 0;
  height: 2px;
  content: \\"\\";
  position: absolute;
  transform: scaleX(0);
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  pointer-events: none;
  background-color: #303f9f;
}
.MuiInput-inkbar.MuiInput-focused:after {
  transform: scaleX(1);
}
.MuiInput-error:after {
  transform: scaleX(1);
  background-color: #f44336;
}
.MuiInput-disabled {
  color: rgba(0, 0, 0, 0.38);
}
.MuiInput-underline:before {
  left: 0;
  right: 0;
  bottom: 0;
  height: 1px;
  content: \\"\\";
  position: absolute;
  transition: background-color 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  pointer-events: none;
  background-color: rgba(0, 0, 0, 0.42);
}
.MuiInput-underline:hover:not(.MuiInput-disabled):before {
  height: 2px;
  background-color: rgba(0, 0, 0, 0.87);
}
.MuiInput-underline.MuiInput-disabled:before {
  background: transparent;
  background-size: 5px 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0.42) 33%, transparent 0%);
  background-repeat: repeat-x;
  background-position: left top;
}
.MuiInput-multiline {
  padding: 6px 0 7px;
}
.MuiInput-fullWidth {
  width: 100%;
}
.MuiInput-input {
  font: inherit;
  width: 100%;
  color: currentColor;
  border: 0;
  margin: 0;
  padding: 6px 0 7px;
  display: block;
  min-width: 0;
  box-sizing: content-box;
  background: none;
  vertical-align: middle;
  -webkit-tap-highlight-color: transparent;
}
.MuiInput-input::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiInput-input::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiInput-input:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiInput-input::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiInput-input:focus {
  outline: 0;
}
.MuiInput-input:invalid {
  box-shadow: none;
}
.MuiInput-input::-webkit-search-decoration {
  appearance: none;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input::-webkit-input-placeholder {
  opacity: 0;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input::-moz-placeholder {
  opacity: 0;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:-ms-input-placeholder {
  opacity: 0;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input::-ms-input-placeholder {
  opacity: 0;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:focus::-webkit-input-placeholder {
  opacity: 0.42;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:focus::-moz-placeholder {
  opacity: 0.42;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:focus:-ms-input-placeholder {
  opacity: 0.42;
}
label[data-shrink=false] + .MuiInput-formControl .MuiInput-input:focus::-ms-input-placeholder {
  opacity: 0.42;
}
.MuiInput-inputDense {
  padding-top: 3px;
}
.MuiInput-inputDisabled {
  opacity: 1;
}
.MuiInput-inputSingleline {
  height: 1.1875em;
}
.MuiInput-inputMultiline {
  resize: none;
  padding: 0;
}
.MuiInput-inputSearch {
  appearance: textfield;
}
.MuiFormControl-root {
  margin: 0;
  border: 0;
  display: inline-flex;
  padding: 0;
  position: relative;
  min-width: 0;
  flex-direction: column;
}
.MuiFormControl-marginNormal {
  margin-top: 16px;
  margin-bottom: 8px;
}
.MuiFormControl-marginDense {
  margin-top: 8px;
  margin-bottom: 4px;
}
.MuiFormControl-fullWidth {
  width: 100%;
}
.fcInput-input > input {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.fcInput-readOnly > input {
  color: rgba(0, 0, 0, 0.87);
}
.fcAutocomplete-root {
  position: relative;
  flex-grow: 1;
}
.fcAutocomplete-suggestionsContainerOpen {
  left: 0;
  right: 0;
  position: absolute;
  overflow: auto;
  margin-top: 8px;
  max-height: 240px;
  margin-bottom: 24px;
}
.fcAutocomplete-suggestion {
  display: block;
}
.fcAutocomplete-suggestionContent {
  font-weight: 300;
}
.fcAutocomplete-highlight {
  font-weight: 500;
}
.fcAutocomplete-suggestionsList {
  margin: 0;
  padding: 0;
  list-style-type: none;
}
.fcAutocomplete-textField {
  width: 100%;
}"
`;

exports[`snapshot: className html 1`] = `
<form
  className="fcAutocomplete-root test-class"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-inkbar MuiInput-underline"
        onBlur={[Function]}
        onFocus={[Function]}
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          autoFocus={undefined}
          className="MuiInput-input MuiInput-inputSingleline"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-shadow2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: only label css 1`] = `
".MuiFormLabel-root {
  color: rgba(0, 0, 0, 0.54);
  padding: 0;
  font-size: 1rem;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1;
}
.MuiFormLabel-focused {
  color: #303f9f;
}
.MuiFormLabel-error {
  color: #f44336;
}
.MuiFormLabel-disabled {
  color: rgba(0, 0, 0, 0.38);
}
.MuiInputLabel-root {
  transform-origin: top left;
}
.MuiInputLabel-formControl {
  top: 0;
  left: 0;
  position: absolute;
  transform: translate(0, 24px) scale(1);
}
.MuiInputLabel-labelDense {
  transform: translate(0, 21px) scale(1);
}
.MuiInputLabel-shrink {
  transform: translate(0, 1.5px) scale(0.75);
  transform-origin: top left;
}
.MuiInputLabel-animated {
  transition: transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
}
.MuiInputLabel-disabled {
  color: rgba(0, 0, 0, 0.38);
}"
`;

exports[`snapshot: only label html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink={false}
        htmlFor={undefined}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-inkbar MuiInput-underline"
        onBlur={[Function]}
        onFocus={[Function]}
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          autoFocus={undefined}
          className="MuiInput-input MuiInput-inputSingleline"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-shadow2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: read only css 1`] = `""`;

exports[`snapshot: read only html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
        htmlFor={undefined}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-disabled MuiInput-fullWidth MuiInput-formControl MuiInput-inkbar MuiInput-underline"
        onBlur={[Function]}
        onFocus={[Function]}
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          autoFocus={undefined}
          className="MuiInput-input MuiInput-inputDisabled MuiInput-inputSingleline"
          defaultValue={undefined}
          disabled={true}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="suggest"
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-shadow2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: should be under previous css 1`] = `""`;

exports[`snapshot: should be under previous html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
        htmlFor={undefined}
      >
        should be under previous
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-inkbar MuiInput-underline"
        onBlur={[Function]}
        onFocus={[Function]}
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          autoFocus={undefined}
          className="MuiInput-input MuiInput-inputSingleline"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="should be under previous"
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-shadow2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: with handlers css 1`] = `""`;

exports[`snapshot: with handlers css 2`] = `
".MuiTouchRipple-root {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  z-index: 0;
  position: absolute;
  overflow: hidden;
  border-radius: inherit;
  pointer-events: none;
}
.MuiTouchRipple-wrapper {
  opacity: 1;
}
.MuiTouchRipple-wrapperLeaving {
  opacity: 0;
  animation: mui-ripple-exit 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-wrapperPulsating {
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: block;
  position: absolute;
  animation: mui-ripple-pulsate 2500ms cubic-bezier(0.4, 0, 0.2, 1) 200ms infinite;
}
@keyframes mui-ripple-enter {
  0% {
    transform: scale(0);
  }
  100% {
    transform: scale(1);
  }
}
@keyframes mui-ripple-exit {
  0% {
    opacity: 1;
  }
  100% {
    opacity: 0;
  }
}
@keyframes mui-ripple-pulsate {
  0% {
    transform: scale(1);
  }
  50% {
    transform: scale(0.92);
  }
  100% {
    transform: scale(1);
  }
}
.MuiTouchRipple-ripple {
  top: 0;
  left: 0;
  width: 50px;
  height: 50px;
  opacity: 0;
  position: absolute;
  background: currentColor;
  border-radius: 50%;
}
.MuiTouchRipple-rippleVisible {
  opacity: 0.3;
  transform: scale(1);
  animation: mui-ripple-enter 550ms cubic-bezier(0.4, 0, 0.2, 1);
}
.MuiTouchRipple-rippleFast {
  animation-duration: 200ms;
}
.MuiButtonBase-root {
  color: inherit;
  cursor: pointer;
  border: 0;
  padding: 0;
  display: inline-flex;
  outline: none;
  position: relative;
  appearance: none;
  align-items: center;
  user-select: none;
  border-radius: 0;
  vertical-align: middle;
  justify-content: center;
  text-decoration: none;
  background-color: transparent;
  -webkit-tap-highlight-color: transparent;
}
.MuiButtonBase-root::-moz-focus-inner {
  border-style: none;
}
.MuiButtonBase-disabled {
  cursor: default;
  pointer-events: none;
}
.MuiListItem-root {
  display: flex;
  position: relative;
  align-items: center;
  justify-content: flex-start;
  text-decoration: none;
}
.MuiListItem-container {
  position: relative;
}
.MuiListItem-keyboardFocused {
  background-color: rgba(0, 0, 0, 0.14);
}
.MuiListItem-default {
  padding-top: 12px;
  padding-bottom: 12px;
}
.MuiListItem-dense {
  padding-top: 8px;
  padding-bottom: 8px;
}
.MuiListItem-disabled {
  opacity: 0.5;
}
.MuiListItem-divider {
  border-bottom: 1px solid rgba(0, 0, 0, 0.12);
}
.MuiListItem-gutters {
  padding-left: 16px;
  padding-right: 16px;
}
.MuiListItem-button {
  transition: background-color 150ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}
.MuiListItem-button:hover {
  text-decoration: none;
  background-color: rgba(0, 0, 0, 0.14);
}
@media (hover: none) {
  .MuiListItem-button:hover {
    background-color: transparent;
  }
}
.MuiListItem-button:hover.MuiListItem-disabled {
  background-color: transparent;
}
.MuiListItem-secondaryAction {
  padding-right: 32px;
}
.MuiMenuItem-root {
  color: rgba(0, 0, 0, 0.87);
  height: 24px;
  overflow: hidden;
  font-size: 1rem;
  box-sizing: content-box;
  font-weight: 400;
  font-family: \\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif;
  line-height: 1.5em;
  white-space: nowrap;
  text-overflow: ellipsis;
}
.MuiMenuItem-root.MuiMenuItem-selected {
  background-color: rgba(0, 0, 0, 0.08);
}
.MuiMenuItem-root:hover {
  background-color: rgba(0, 0, 0, 0.14);
}"
`;

exports[`snapshot: with handlers html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated"
        data-shrink={false}
        htmlFor={undefined}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-inkbar MuiInput-underline"
        onBlur={[Function]}
        onFocus={[Function]}
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          autoFocus={undefined}
          className="MuiInput-input MuiInput-inputSingleline"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-shadow2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: with handlers html 2`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
        htmlFor={undefined}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={true}
        aria-haspopup={true}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-inkbar MuiInput-underline"
        onBlur={[Function]}
        onFocus={[Function]}
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          autoFocus={undefined}
          className="MuiInput-input MuiInput-inputSingleline"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="sup sug"
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-shadow2 fcAutocomplete-suggestionsContainerOpen"
      id="react-autowhatever-1"
    >
      <ul
        className="fcAutocomplete-suggestionsList"
        role="listbox"
      >
        <li
          className="fcAutocomplete-suggestion"
          data-section-index={null}
          data-suggestion-index={0}
          id="react-autowhatever-1--item-0"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="option"
        >
          <div
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button MuiListItem-default MuiMenuItem-root"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <div>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sup
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                er 
              </span>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sug
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                gest1
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </li>
        <li
          className="fcAutocomplete-suggestion"
          data-section-index={null}
          data-suggestion-index={1}
          id="react-autowhatever-1--item-1"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="option"
        >
          <div
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button MuiListItem-default MuiMenuItem-root"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <div>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sup
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                er 
              </span>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sug
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                gest2
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </li>
        <li
          className="fcAutocomplete-suggestion"
          data-section-index={null}
          data-suggestion-index={2}
          id="react-autowhatever-1--item-2"
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onTouchStart={[Function]}
          role="option"
        >
          <div
            className="MuiButtonBase-root MuiListItem-root MuiListItem-gutters MuiListItem-button MuiListItem-default MuiMenuItem-root"
            disabled={false}
            onBlur={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchMove={[Function]}
            onTouchStart={[Function]}
            role="menuitem"
            tabIndex={-1}
          >
            <div>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sup
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                er 
              </span>
              <span
                className="fcAutocomplete-suggestionContent fcAutocomplete-highlight"
              >
                sug
              </span>
              <span
                className="fcAutocomplete-suggestionContent"
              >
                gest3
              </span>
            </div>
            <span
              className="MuiTouchRipple-root"
            />
          </div>
        </li>
      </ul>
    </div>
  </div>
</form>
`;

exports[`snapshot: with text css 1`] = `""`;

exports[`snapshot: with text html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <label
        className="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink"
        data-shrink={true}
        htmlFor={undefined}
      >
        autocomplete
      </label>
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-inkbar MuiInput-underline"
        onBlur={[Function]}
        onFocus={[Function]}
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          autoFocus={undefined}
          className="MuiInput-input MuiInput-inputSingleline"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value="suggest"
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-shadow2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;

exports[`snapshot: without props css 1`] = `""`;

exports[`snapshot: without props html 1`] = `
<form
  className="fcAutocomplete-root"
  onSubmit={[Function]}
>
  <div
    style={Object {}}
  >
    <div
      aria-describedby={undefined}
      className="MuiFormControl-root MuiFormControl-fullWidth fcAutocomplete-textField fcInput-root"
      onBlur={[Function]}
      onFocus={[Function]}
      required={false}
    >
      <div
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-expanded={false}
        aria-haspopup={false}
        aria-owns="react-autowhatever-1"
        className="MuiInput-root MuiInput-fullWidth MuiInput-formControl MuiInput-inkbar MuiInput-underline"
        onBlur={[Function]}
        onFocus={[Function]}
        role="combobox"
        style={Object {}}
      >
        <input
          aria-invalid={false}
          aria-required={false}
          autoComplete="off"
          autoFocus={undefined}
          className="MuiInput-input MuiInput-inputSingleline"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name={undefined}
          onChange={[Function]}
          onKeyDown={[Function]}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={undefined}
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      className="MuiPaper-root MuiPaper-shadow2"
      id="react-autowhatever-1"
      style={Object {}}
    />
  </div>
</form>
`;
